fix(styles): add text-wrap property for better text rendering in specific elements

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,11 @@
 @tailwind components;
 @tailwind utilities;
 
+span, p, h1, h2, h3, h4, h5, h6, div {
+  text-wrap: balance;
+
+}
+
 @font-face {
   font-family: "Neue Haas Display";
   src: url("./assets/fonts/NeueHaasDisplayRoman.ttf") format("truetype");
